--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -181,7 +181,6 @@
     <ClInclude Include="include\Components\Content\qgl_image.h" />
     <ClInclude Include="include\Components\Content\qgl_light.h" />
     <ClInclude Include="include\Components\Content\qgl_texture.h" />
-    <ClInclude Include="include\Components\Content\qgl_text_format.h" />
     <ClInclude Include="include\Components\Content\qgl_wtext.h" />
     <ClInclude Include="include\Components\qgl_render_context.h" />
     <ClInclude Include="include\Components\Render\qgl_brush.h" />
@@ -212,6 +211,7 @@
     <ClInclude Include="include\GPU\Buffers\qgl_upload_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_vertex_buffer.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_cmd_bundle.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_cmd_executor.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_cpy_cmd_list.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_graphics_cmd_list.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_icmd_list.h" />
@@ -224,11 +224,13 @@
     <ClInclude Include="include\GPU\Descriptors\qgl_sampler_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_srv_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_uav_descriptor_heap.h" />
+    <ClInclude Include="include\GPU\Memory\qgl_allocator_stats.h" />
     <ClInclude Include="include\GPU\Memory\qgl_committed_allocator.h" />
+    <ClInclude Include="include\GPU\Memory\qgl_tex2d_allocator.h" />
     <ClInclude Include="include\GPU\Memory\qgl_igpu_allocator.h" />
     <ClInclude Include="include\GPU\Memory\qgl_slot_allocator.h" />
     <ClInclude Include="include\GPU\qgl_frame.h" />
-    <ClInclude Include="include\GPU\qgl_gpu_msg_callback.h" />
+    <ClInclude Include="include\GPU\qgl_gpu_msg_dispatchers.h" />
     <ClInclude Include="include\GPU\qgl_graphics_pso.h" />
     <ClInclude Include="include\GPU\qgl_ipso.h" />
     <ClInclude Include="include\GPU\Render\qgl_blender.h" />
@@ -282,7 +284,6 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
-    <ClCompile Include="src\GPU\qgl_gpu_msg_callback.cpp" />
     <ClCompile Include="src\Helpers\qgl_color_helpers.cpp" />
     <ClCompile Include="src\Helpers\qgl_graphics_device_helpers.cpp" />
     <ClCompile Include="src\Helpers\qgl_supported_helpers.cpp" />
