--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
@@ -233,10 +233,10 @@
     <ClCompile Include="Tests\Observer-Observable\subject_out_of_scope_tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\subject_remove_tests.cpp" />
     <ClCompile Include="Tests\Structures\fixed_buffer_tests.cpp" />
+    <ClCompile Include="Tests\Structures\ts_list_tests.cpp" />
+    <ClCompile Include="Tests\Structures\ts_uset_tests.cpp" />
+    <ClCompile Include="Tests\Structures\ts_vector_tests.cpp" />
     <ClCompile Include="Tests\version_tests.cpp" />
-    <ClCompile Include="Tests\Structures\basic_graph_tests.cpp" />
-    <ClCompile Include="Tests\Structures\basic_tree_map_tests.cpp" />
-    <ClCompile Include="Tests\Structures\tree_helper_tests.cpp" />
     <ClCompile Include="Tests\Timing\timer_tests.cpp" />
     <ClCompile Include="Tests\Timing\time_helper_tests.cpp" />
     <ClCompile Include="Tests\Timing\time_state_tests.cpp" />
