--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -125,7 +125,7 @@
       <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;dxguid.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Link>
       <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
@@ -134,7 +134,7 @@
     <Link />
     <Link />
     <Link>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;QGL_Math.lib;QGL_Model.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;dxguid.lib;QGL_Math.lib;QGL_Model.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Link>
       <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -158,7 +158,7 @@
       <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;dxguid.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Link>
       <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -167,7 +167,7 @@
     <Link />
     <Link />
     <Link>
-      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Release|x64'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Release|x64'">d3dcompiler.lib;d2d1.lib;dwrite.lib;d3d11.lib;d3d12.lib;dxgi.lib;dxguid.lib;QGL_Math.lib;QGL_Model.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Link>
       <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -177,11 +177,6 @@
   <ItemGroup>
     <ClCompile Include="src\Shaders\qgl_shader_descriptors.cpp" />
     <ClCompile Include="src\Shaders\qgl_shader_helpers.cpp" />
-    <ClInclude Include="include\Components\Content\qgl_camera.h" />
-    <ClInclude Include="include\Components\Content\qgl_image.h" />
-    <ClInclude Include="include\Components\Content\qgl_light.h" />
-    <ClInclude Include="include\Components\Content\qgl_texture.h" />
-    <ClInclude Include="include\Components\Content\qgl_wtext.h" />
     <ClInclude Include="include\Components\qgl_render_context.h" />
     <ClInclude Include="include\Components\Render\qgl_brush.h" />
     <ClInclude Include="include\Components\Render\qgl_geom2d_render.h" />
@@ -192,22 +187,19 @@
     <ClInclude Include="include\Descriptors\qgl_blend_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_brush_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_brush_outline_descriptor.h" />
-    <ClInclude Include="include\Descriptors\qgl_camera_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_depth_stencil_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_engine_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_hdr_descriptor.h" />
-    <ClInclude Include="include\Descriptors\qgl_light_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_multisampler_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_rasterizer_descriptor.h" />
-    <ClInclude Include="include\Descriptors\qgl_screen_space_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_texture_descriptor.h" />
-    <ClInclude Include="include\Descriptors\qgL_text_format_descriptor.h" />
     <ClInclude Include="include\Descriptors\qgl_vector_descriptor.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_igpu_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_const_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_imappable.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_index_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_readback_buffer.h" />
+    <ClInclude Include="include\GPU\Buffers\qgl_texture_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_upload_buffer.h" />
     <ClInclude Include="include\GPU\Buffers\qgl_vertex_buffer.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_cmd_bundle.h" />
@@ -215,6 +207,7 @@
     <ClInclude Include="include\GPU\Command-Lists\qgl_cpy_cmd_list.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_graphics_cmd_list.h" />
     <ClInclude Include="include\GPU\Command-Lists\qgl_icmd_list.h" />
+    <ClInclude Include="include\GPU\Command-Lists\qgl_upload_cmd_list.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_cbv_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Descriptors\qgl_descriptor_range.h" />
@@ -226,13 +219,15 @@
     <ClInclude Include="include\GPU\Descriptors\qgl_uav_descriptor_heap.h" />
     <ClInclude Include="include\GPU\Memory\qgl_allocator_stats.h" />
     <ClInclude Include="include\GPU\Memory\qgl_committed_allocator.h" />
-    <ClInclude Include="include\GPU\Memory\qgl_tex2d_allocator.h" />
     <ClInclude Include="include\GPU\Memory\qgl_igpu_allocator.h" />
     <ClInclude Include="include\GPU\Memory\qgl_slot_allocator.h" />
+    <ClInclude Include="include\GPU\Memory\qgl_tex2d_allocator.h" />
     <ClInclude Include="include\GPU\qgl_frame.h" />
+    <ClInclude Include="include\GPU\qgl_geom2d_vert.h" />
     <ClInclude Include="include\GPU\qgl_gpu_msg_dispatchers.h" />
     <ClInclude Include="include\GPU\qgl_graphics_pso.h" />
     <ClInclude Include="include\GPU\qgl_ipso.h" />
+    <ClInclude Include="include\GPU\qgl_sprite_vert.h" />
     <ClInclude Include="include\GPU\Render\qgl_blender.h" />
     <ClInclude Include="include\GPU\Render\qgl_depth_stencil.h" />
     <ClInclude Include="include\GPU\Render\qgl_irender_target.h" />
@@ -258,7 +253,7 @@
     <ClInclude Include="include\qgl_window.h" />
     <ClInclude Include="include\Shaders\qgl_sampler.h" />
     <ClInclude Include="include\Shaders\qgl_sampler_descriptor.h" />
-    <ClInclude Include="include\Shaders\qgl_shader.h" />
+    <ClInclude Include="include\Shaders\qgl_shader_buffer.h" />
     <ClInclude Include="include\Shaders\qgl_shader_compile_params.h" />
     <ClInclude Include="include\Shaders\qgl_shader_descriptor.h" />
     <ClInclude Include="include\Shaders\qgl_shader_helpers.h" />
