--- a/QGL_Input/QGL_Input.vcxproj.filters
+++ b/QGL_Input/QGL_Input.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="include\qgl_input_include.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\QGLInput.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\qgl_input_dispatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -98,6 +95,9 @@
     </ClInclude>
     <ClInclude Include="QGL_InputRT.h">
       <Filter>winrt_rt</Filter>
+    </ClInclude>
+    <ClInclude Include="QGLInput.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
