--- a/QGL_Game/packages.config
+++ b/QGL_Game/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Windows.CppWinRT" version="2.0.221121.5" targetFramework="native" />
+  <package id="directxtex_uwp" version="2023.1.31.1" targetFramework="native" />
+  <package id="Microsoft.Direct3D.D3D12" version="1.608.2" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.230207.1" targetFramework="native" />
 </packages>
